flower/flower-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    component: flower
  name: flower
spec:
  ports:
  - port: 5555
  selector:
    app: taskQueue
    component: flower
