flower/flower-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: flower
  annotations:
    kubernetes.io/tls-acme: "true"
spec:
  tls:
  - hosts:
    - flower.burntsheep.com
    secretName: flower-cert
  rules:
  - host: flower.burntsheep.com
    http:
      paths:
      - path: /
        backend:
          serviceName: flower
          servicePort: 5555
